update on My favorite city
Just more elaboration of the weather conditions in Tinapa Resort area.

--- a/week01/favorite-city.html
+++ b/week01/favorite-city.html
@@ -14,12 +14,14 @@
           The city is famous for it's location on the sea shore.
           It is a beautiful city with a lot of attractions and 
           delicious food. Some of the must-visit places in Calabar 
-          include the Tinapa Resort, the Calabar Museum, and the 
-          National Museum. The city is also known for its delicious 
-          cuisine, including dishes like Edikang Ikong, Afang soup, 
-          and Ekpang Nkukwo. Overall, Calabar is a wonderful city 
-          that offers a unique blend of history, culture, and natural 
-          beauty.</p>
+          include the Tinapa Resort- the weather here is something 
+          else as it is really different from everything African. 
+          The Calabar Museum, and the National Museum. The city is
+          also known for its delicious cuisine, including dishes like 
+          Edikang Ikong, Afang soup, and Ekpang Nkukwo. Overall, 
+          Calabar is a wonderful city that offers a unique blend 
+          of history, culture, and natural beauty.
+        </p>
     <img src="images/0budu-cattle ranch-calabar.jpeg" 
     alt="Nigeria's Slice of Paradise- Obudu Cattle Ranch Calabar">
 </body>
