update on basic

--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header>
-            <img src="week02/images/basic-logo.png" alt="Basic Logo" width="128" height="128">
+            <img src="images/basic-logo.png" alt="Basic Logo" width="128" height="128">
         </header>
         <nav>
             <ul>
@@ -29,7 +29,8 @@
                  paragraph with Lorem ipsum text, in VS Code type lorem1</p>
             </section>
             <aside>
-                <img src="https://www.churchofjesuschrist.org/temples/photo-gallery?lang=eng" alt="Aba Nigeria Temple" width="200">
+                <img src="images/aba_nigerian_temple.jpg" 
+     alt="Aba Nigeria Temple" width="200">
             </aside>
         </main>
         <footer>
