--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="A brief introduction about Obinna's home town">
+        <meta name="author" content="Obinna Godswill Sosthenes Njoku">
         <link rel="stylesheet" href="styles/styles.css">
     <title>Obinna Njoku| wdd130</title>
     </head>
@@ -21,6 +23,16 @@
                 Web Design and Development. I have always had a passion for technology and the internet.
             </p>
         </main>
+        <aside>
+            <h2>Imo State, Nigeria</h2>
+            <img src="images/imo_state.jpeg" alt="Imo State The Eastern Heartland">
+            <p>Imo state the Eastern Heartland  of Nigeria, the capital city is Owerri my actual home town.
+                It is known for its rich culture, beautiful landscapes, and vibrant festivals.
+                Some popular attractions in Imo state include the Oguta Lake, the Mbari Cultural and Art Center,
+                and the Nekede Zoo. The state is also famous for its delicious cuisine, including dishes like
+                Ofe Owerri, Nkwobi, and Abacha. Overall, Imo state is a wonderful place to visit and explore.
+            </p>
+        </aside>
         <footer>&copy; 2025 ❤ Obinna Godswill Sosthenes Njoku ❤ Owerri, Imo Nigeria</footer>
     </body>
 </html>
