--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="A brief introduction about Obinna's home town">
         <meta name="author" content="Obinna Godswill Sosthenes Njoku">
         <link rel="stylesheet" href="styles/styles.css">
-        <title>Obinna Godswill Sosthenes Njoku | wdd130</title>
+        <title>Obinna Njoku | wdd130</title>
     </head>
     <body>
         <header>
