--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="A brief introduction about Obinna's home town">
         <meta name="author" content="Obinna Godswill Sosthenes Njoku">
-        <link rel="stylesheet" href="styles/styles.css">
-        <title>Obinna Njoku | wdd130</title>
+        <link rel="stylesheet" href="styles/style.css">
+        <title>Obinna Njoku | WDD 130</title>    
     </head>
     <body>
         <header>
