--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <nav>
     <a href="#">home</a>
     <a href="ww/r">rafting website</a>
+    <a href ="https://www.linkedin.com/in/nnogs/?trk=opento_sprofile_details" target="_blank">My Linkedin Profile</a>
+    <a href ="https://web.facebook.com/nnogswill" target="_blank">My Facebook Page</a>
 </nav>
         </header>
         <main>
@@ -20,10 +22,23 @@
             <img src="images/nnogs.jpg" alt="Obinna Godswill Sosthenes Njoku" width="200">
             <p>Hello people! My name is Obinna Godswill Sosthenes Njoku, I hail from 
                 Owerri in Imo state, Nigeria. I am currently in BYU Idaho pursuing a degree in
-                Web Design and Development. I have always had a passion for technology and the internet.
+                Web Design and Development. I have always had a passion for technology and the internet. 
+                I am excited to learn more about web development and design through this program.
+                As a student, I am eager to gain practical skills and knowledge that will help me succeed in the field.
+                I am also looking forward to collaborating with my peers and instructors to create innovative and engaging websites.
+                In my free time, I enjoy reading tech blogs, experimenting with new software, and exploring the latest trends in web design.
+                I am excited to see where this program will take me and I am committed to working hard to achieve my goals. Thank you for taking the time to learn a little bit about me!
+                I am also a member of The Church of Jesus Christ of Latter-day Saints and I am grateful for the opportunity to serve a mission in Nigeria.  
+                There are currently three temples in Nigeria, and they are located in Aba, Benin City, and Abuja. MOre are still being built. Thanks to our father in 
+                heaven for the blessings of temples and the opportunity to participate in sacred ordinances.   
             </p>
+            <ul class="box">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple?lang=eng" target="_blank">Aba Nigerian Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/benin-city-nigeria-temple?lang=eng" target="_blank">Benin City Nigerian Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/abuja-nigeria-temple?lang=eng" target="_blank">Abuja Nigerian Temple</a></li>
+            </ul>
         </main>
-        <aside>
+        <aside class="box">
             <h2>Imo State, Nigeria</h2>
             <img src="images/imo_state.jpeg" alt="Imo State The Eastern Heartland">
             <p>Imo state the Eastern Heartland  of Nigeria, the capital city is Owerri my actual home town.
