index page update

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <a href ="https://web.facebook.com/nnogswill" target="_blank">My Facebook Page</a>
 </nav>
         </header>
+        <div class="grid">
         <main>
             <h1>Obinna Godswill Sosthenes Njoku | WDD 130</h1>
             <img src="images/nnogs.jpg" alt="Obinna Godswill Sosthenes Njoku" width="200">
@@ -48,6 +49,7 @@
                 Ofe Owerri, Nkwobi, and Abacha. Overall, Imo state is a wonderful place to visit and explore.
             </p>
         </aside>
+        </div>
         <footer>&copy; 2025 ❤ Obinna Godswill Sosthenes Njoku ❤ Owerri, Imo Nigeria</footer>
     </body>
 </html>
