--- a/wwr/about.html
+++ b/wwr/about.html
@@ -10,58 +10,84 @@
     </head>
     <body>
         <header>
-            <a class="logo">
-                <img src="images/wwr_logo.png" alt="Company's logo">
+            <div class="logo">
+                <img src="images/wwr_logo1.png" alt="Company logo">
+            </div>
             <nav>
-             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="trips.html">Trips</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-             </ul>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="trips.html">Trips</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
             </nav>
         </header>
         <main>
             <div class="hero">
-            <img src="images/winingteam-abtus.jpg" alt="The blues on rafting">
-            <h1>NNOGS WHITEWATER RAFTING COMPANY</h1>
-            <article>
-                <img src="images/happy-employee.jpeg" alt="Happy Employee">
-                <p>
-                    Here in NNOGS WHITEWATER RAFTING COMPANY, below are all we stand for<br> 
-                    Purpose: To give our customers an experience not found anywhere else.<br>
-                    Mission: To grant out customers an alternative to bordom.<br>
-                    Creed: Leann the ropes while you glide, non was born to do it better without experience<br>
-                    Motto: Never Let The Tides Win
-                </p>
-            </article>
+                <img src="images/winingteam-abtus.jpg" alt="Team rafting on water">
+                <h1>NNOGS WHITEWATER RAFTING COMPANY</h1>
+                <article>
+                    <img src="images/happy-employee.jpeg" alt="Smiling employee">
+                    <p>
+                        Here in NNOGS WHITEWATER RAFTING COMPANY, below are all we stand for:<br> 
+                        <strong>Purpose:</strong> To give our customers an experience not found anywhere else.<br>
+                        <strong>Mission:</strong> To grant our customers an alternative to boredom.<br>
+                        <strong>Creed:</strong> Learn the ropes while you glide — none was born to do it better without experience.<br>
+                        <strong>Motto:</strong> Never Let The Tides Win
+                    </p>
+                </article>
             </div>
-            <section>
-                <h2>History</h2>
+            <h2>History</h2>
+            <section class="history">  
                 <p>
-                    This company started in 2012 with only two people to pilot it, it sure
-                    was a challenge then and we started with only two air pump boats with no one 
-                    to help in navigation. The taxes was a challenge till we broke even and we 
-                    witness massive patronage which got us out from the slums in terms of debt 
-                    and all. 
+                    This company started in 2012 with only two people to pilot it. It was a challenge back then, 
+                    as we started with just two air-pump boats and no one to help with navigation. 
+                    Taxes were a challenge until we broke even, but soon we witnessed massive patronage, 
+                    which got us out of debt. 
+                </p>
+                <img src="images/org_history.jpg" alt="Our company's history"> 
+                <p>
+                    It didn’t end there. What started out as a struggle turned into a great adventure, 
+                    because we have been learning on the job day by day. From a wooden raft to rubber, 
+                    and now a balloon raft, we are still heading toward sophistication. 
+                    To be candid, it can only be God. 
                 </p>
             </section>
-            <section>
-                <h2>Adventure Awaits You!</h2>
+            <h2>Adventure Awaits You!</h2>
+            <section class="adventures">
+                <figure>
+                    <img src="images/bluegate-rafters.jpeg" alt="Blue Gate Rafters">
+                    <figcaption>Blue Gate Rafters</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/onshore-rafters.jpeg" alt="Onshore Rafters">
+                    <figcaption>Onshore Rafters</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/resilient-rafters.jpeg" alt="Resilient Rafters">
+                    <figcaption>Resilient Rafters</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/winingteam-rafters.jpeg" alt="The Winning Team">
+                    <figcaption>The Winning Team</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/gameover-rafters.jpeg" alt="The Finishers">
+                    <figcaption>The Finishers</figcaption>
+                </figure>
             </section>
-            </div>
         </main>
         <footer>
-            <p>&copy; 2025 NNOGS WHITEWATER RAFTING COMPANY - OBINNA GODWILL S. NJOKU</p>
-            <nav calss="socialmedia">
+            <p>&copy; 2025 NNOGS WHITEWATER RAFTING COMPANY - OBINNA GODSWILL S. NJOKU</p>
+            <nav class="socialmedia">
                 <a href="https://web.facebook.com/nnogswill">
-                    <img src="images/fb_icon.png" alt="Company CEO Facebook Profile">
+                    <img src="images/fb_icon.png" alt="Facebook">
                 </a>
                 <a href="https://www.linkedin.com/in/nnogs/?trk=opento_sprofile_details">
-                    <img src="images/linkedin_icon.png" alt="Company CEO Linkedin Profile">
+                    <img src="images/linkedin_icon.png" alt="LinkedIn">
                 </a>
                 <a href="https://www.instagram.com/nnogswill/?hl=en">
-                    <img src="images/insta_icon.png" alt="Company CEO instagram profile">
+                    <img src="images/insta_icon.png" alt="Instagram">
                 </a>
             </nav>
         </footer>
