update on index page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="A brief introduction about Obinna's home town">
+        <meta name="description" content="Obinna Njoku's BYU-Idaho WDD 130 home page">
         <meta name="author" content="Obinna Godswill Sosthenes Njoku">
         <link rel="stylesheet" href="styles/style.css">
         <title>Obinna Njoku | WDD 130</title>    
@@ -12,7 +12,7 @@
         <header>
 <nav>
     <a href="#">home</a>
-    <a href="ww/r">rafting website</a>
+    <a href="wwr/">rafting website</a>
     <a href ="https://www.linkedin.com/in/nnogs/?trk=opento_sprofile_details" target="_blank">My Linkedin Profile</a>
     <a href ="https://web.facebook.com/nnogswill" target="_blank">My Facebook Page</a>
 </nav>
@@ -20,7 +20,7 @@
         <div class="grid">
         <main>
             <h1>Obinna Godswill Sosthenes Njoku | WDD 130</h1>
-            <img src="images/nnogs.jpg" alt="Obinna Godswill Sosthenes Njoku" width="200">
+            <img src="images/nnogs.jpg" alt="Portrait of Obinna Godswill Sosthenes Njoku" width="200">
             <p>Hello people! My name is Obinna Godswill Sosthenes Njoku, I hail from 
                 Owerri in Imo state, Nigeria. I am currently in BYU Idaho pursuing a degree in
                 Web Design and Development. I have always had a passion for technology and the internet. 
@@ -40,9 +40,10 @@
             </ul>
         </main>
         <aside class="box">
+            <img src="images/imo_state.jpeg" alt="A local Govt in Imo State - Eastern Heartland">
             <h2>Imo State, Nigeria</h2>
-            <img src="images/imo_state.jpeg" alt="Imo State The Eastern Heartland">
-            <p>Imo state the Eastern Heartland  of Nigeria, the capital city is Owerri my actual home town.
+            <p>
+                Imo state the Eastern Heartland  of Nigeria, the capital city is Owerri my actual home town.
                 It is known for its rich culture, beautiful landscapes, and vibrant festivals.
                 Some popular attractions in Imo state include the Oguta Lake, the Mbari Cultural and Art Center,
                 and the Nekede Zoo. The state is also famous for its delicious cuisine, including dishes like
