--- a/index.html
+++ b/index.html
@@ -1,56 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Obinna Njoku's BYU-Idaho WDD 130 home page">
-        <meta name="author" content="Obinna Godswill Sosthenes Njoku">
-        <link rel="stylesheet" href="styles/style.css">
-        <title>Obinna Njoku | WDD 130</title>    
-    </head>
-    <body>
-        <header>
-<nav>
-    <a href="#">home</a>
-    <a href="wwr/">rafting website</a>
-    <a href ="https://www.linkedin.com/in/nnogs/?trk=opento_sprofile_details" target="_blank">My Linkedin Profile</a>
-    <a href ="https://web.facebook.com/nnogswill" target="_blank">My Facebook Page</a>
-</nav>
-        </header>
-        <div class="grid">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Obinna Njoku's BYU-Idaho WDD 130 home page">
+    <meta name="author" content="Obinna Godswill Sosthenes Njoku">
+    <link rel="stylesheet" href="styles/style.css">
+    <title>Obinna Njoku | WDD 130</title>
+</head>
+
+<body>
+    <header>
+        <nav>
+            <a href="#">home</a>
+            <a href="wwr/">rafting website</a>
+            <a href="https://www.linkedin.com/in/nnogs/?trk=opento_sprofile_details" target="_blank">My Linkedin
+                Profile</a>
+            <a href="https://web.facebook.com/nnogswill" target="_blank">My Facebook Page</a>
+        </nav>
+    </header>
+    <div class="grid">
         <main>
             <h1>Obinna Godswill Sosthenes Njoku | WDD 130</h1>
             <img src="images/nnogs.jpg" alt="Portrait of Obinna Godswill Sosthenes Njoku" width="200">
-            <p>Hello people! My name is Obinna Godswill Sosthenes Njoku, I hail from 
+            <p>Hello people! My name is Obinna Godswill Sosthenes Njoku, I hail from
                 Owerri in Imo state, Nigeria. I am currently in BYU Idaho pursuing a degree in
-                Web Design and Development. I have always had a passion for technology and the internet. 
+                Web Design and Development. I have always had a passion for technology and the internet.
                 I am excited to learn more about web development and design through this program.
                 As a student, I am eager to gain practical skills and knowledge that will help me succeed in the field.
-                I am also looking forward to collaborating with my peers and instructors to create innovative and engaging websites.
-                In my free time, I enjoy reading tech blogs, experimenting with new software, and exploring the latest trends in web design.
-                I am excited to see where this program will take me and I am committed to working hard to achieve my goals. Thank you for taking the time to learn a little bit about me!
-                I am also a member of The Church of Jesus Christ of Latter-day Saints and I am grateful for the opportunity to serve a mission in Nigeria.  
-                There are currently three temples in Nigeria, and they are located in Aba, Benin City, and Abuja. MOre are still being built. Thanks to our father in 
-                heaven for the blessings of temples and the opportunity to participate in sacred ordinances.   
+                I am also looking forward to collaborating with my peers and instructors to create innovative and
+                engaging websites.
+                In my free time, I enjoy reading tech blogs, experimenting with new software, and exploring the latest
+                trends in web design.
+                I am excited to see where this program will take me and I am committed to working hard to achieve my
+                goals. Thank you for taking the time to learn a little bit about me!
+                I am also a member of The Church of Jesus Christ of Latter-day Saints and I am grateful for the
+                opportunity to serve a mission in Nigeria.
+                There are currently three temples in Nigeria, and they are located in Aba, Benin City, and Abuja. MOre
+                are still being built. Thanks to our father in
+                heaven for the blessings of temples and the opportunity to participate in sacred ordinances.
             </p>
             <ul class="box">
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple?lang=eng" target="_blank">Aba Nigerian Temple</a></li>
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/benin-city-nigeria-temple?lang=eng" target="_blank">Benin City Nigerian Temple</a></li>
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/abuja-nigeria-temple?lang=eng" target="_blank">Abuja Nigerian Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple?lang=eng"
+                        target="_blank">Aba Nigerian Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/benin-city-nigeria-temple?lang=eng"
+                        target="_blank">Benin City Nigerian Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/abuja-nigeria-temple?lang=eng"
+                        target="_blank">Abuja Nigerian Temple</a></li>
             </ul>
         </main>
         <aside class="box">
             <img src="images/imo_state.jpeg" alt="A local Govt in Imo State - Eastern Heartland">
             <h2>Imo State, Nigeria</h2>
             <p>
-                Imo state the Eastern Heartland  of Nigeria, the capital city is Owerri my actual home town.
+                Imo state the Eastern Heartland of Nigeria, the capital city is Owerri my actual home town.
                 It is known for its rich culture, beautiful landscapes, and vibrant festivals.
                 Some popular attractions in Imo state include the Oguta Lake, the Mbari Cultural and Art Center,
                 and the Nekede Zoo. The state is also famous for its delicious cuisine, including dishes like
                 Ofe Owerri, Nkwobi, and Abacha. Overall, Imo state is a wonderful place to visit and explore.
             </p>
         </aside>
-        </div>
-        <footer>&copy; 2025 ❤ Obinna Godswill Sosthenes Njoku ❤ Owerri, Imo Nigeria</footer>
-    </body>
+    </div>
+    <footer>&copy; 2025 ❤ Obinna Godswill Sosthenes Njoku ❤ Owerri, Imo Nigeria</footer>
+</body>
+
 </html>
