Home page update

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
             </p>
         </aside>
     </div>
-    <footer>&copy; 2025 ❤ Obinna Godswill Sosthenes Njoku ❤ Owerri, Imo Nigeria</footer>
+    <footer>
+        <P>&copy; 2025 ❤ Obinna Godswill Sosthenes Njoku ❤ Owerri, Imo Nigeria - WDD130</P>
+    </footer>
 </body>
 
 </html>
