--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <a href="https://web.facebook.com/nnogswill" target="_blank">My Facebook Page</a>
         </nav>
     </header>
-    <div class="grid">
-        <main>
+    <main>
+        <div class="grid">
             <h1>Obinna Godswill Sosthenes Njoku | WDD 130</h1>
             <img src="images/nnogs.jpg" alt="Portrait of Obinna Godswill Sosthenes Njoku" width="200">
             <p>Hello people! My name is Obinna Godswill Sosthenes Njoku, I hail from
@@ -49,21 +49,33 @@
                 <li><a href="https://www.churchofjesuschrist.org/temples/details/abuja-nigeria-temple?lang=eng"
                         target="_blank">Abuja Nigerian Temple</a></li>
             </ul>
-        </main>
-        <aside class="box">
-            <img src="images/imo_state.jpeg" alt="A local Govt in Imo State - Eastern Heartland">
-            <h2>Imo State, Nigeria</h2>
-            <p>
-                Imo state the Eastern Heartland of Nigeria, the capital city is Owerri my actual home town.
-                It is known for its rich culture, beautiful landscapes, and vibrant festivals.
-                Some popular attractions in Imo state include the Oguta Lake, the Mbari Cultural and Art Center,
-                and the Nekede Zoo. The state is also famous for its delicious cuisine, including dishes like
-                Ofe Owerri, Nkwobi, and Abacha. Overall, Imo state is a wonderful place to visit and explore.
-            </p>
-        </aside>
-    </div>
+
+            <aside class="box">
+                <img src="images/imo_state.jpeg" alt="A local Govt in Imo State - Eastern Heartland">
+                <h2>Imo State, Nigeria</h2>
+                <p>
+                    Imo state the Eastern Heartland of Nigeria, the capital city is Owerri my actual home town.
+                    It is known for its rich culture, beautiful landscapes, and vibrant festivals.
+                    Some popular attractions in Imo state include the Oguta Lake, the Mbari Cultural and Art Center,
+                    and the Nekede Zoo. The state is also famous for its delicious cuisine, including dishes like
+                    Ofe Owerri, Nkwobi, and Abacha. Overall, Imo state is a wonderful place to visit and explore.
+                </p>
+            </aside>
+        </div>
+    </main>
     <footer>
-        <P>&copy; 2025 ❤ Obinna Godswill Sosthenes Njoku ❤ Owerri, Imo Nigeria - WDD130</P>
+        <P>&copy; 2025 ❤ NNOGS WHITEWATER RAFTING COMPANY - Obinna Njoku ❤ - WDD130</P>
+        <nav class="socialmedia">
+            <a href="https://web.facebook.com/nnogswill">
+                <img src="images/fb_icon.png" alt="Facebook">
+            </a>
+            <a href="https://www.linkedin.com/in/nnogs/?trk=opento_sprofile_details">
+                <img src="images/linkedin_icon.png" alt="LinkedIn">
+            </a>
+            <a href="https://www.instagram.com/nnogswill/?hl=en">
+                <img src="images/insta_icon.png" alt="Instagram">
+            </a>
+        </nav>
     </footer>
 </body>
 
