--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Obinna Njoku's BYU-Idaho WDD 130 home page">
     <meta name="author" content="Obinna Godswill Sosthenes Njoku">
-    <link ref="stylesheet" href="styles/poll-form.css">
+    <link rel="stylesheet" href="styles/poll-form.css">
     <title>Obinna Njoku | WDD 130</title>
 </head>
 
